<resources>
    <string name="app_name">Kandoe</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Gebruikersnaam</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="sign_in">Aanmelden</string>
    <string name="register">registreren</string>
    <string name="password_confirmation">Wachtwoord (bevestiging)</string>
    <string name="error_invalid_username">Deze gebruikersnaam is ongeldig</string>
    <string name="error_invalid_password">Deze wachtwoord is te kort</string>
    <string name="error_incorrect_password">Deze wachtwoord is incorrect</string>
    <string name="error_field_required">Dit veld moet ingevuld zijn</string>
    <string name="permission_rationale">"Contacts permission is vereist zodat de app kan functioneren"
    </string>
    <string name="title_activity_cirkelsessie">Cirkelsessie</string>
    <string name="title_activity_cirkelsessie_lijst">Alle Cirkelsessies</string>
    <string name="title_activity_main">Home</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">sluit drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_subthema">SubthemaActivity</string>
    <string name="subthema">Subthema</string>
    <string name="token">token</string>
    <string name="gebruiker">gebruiker</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuleer</string>
    <string name="kandoe_circle">Kandoe Circle</string>
    <string name="email">E-mail adres</string>
    <string name="password_mismatch">De wachtwoorden verschillen van elkaar</string>
    <string name="register_fail">Het registreren is mislukt</string>
    <string name="register_success">Het registreren is gelukt, u kunt u nu aanmelden.</string>

    <string name="kaarten_text">Aantal kaarten</string>
    <string name="button_kaart">Kaart aanmaken</string>
    <string name="cirkel_grootte">Cirkel met grootte</string>
    <string name="deelnemen">Deelnemen</string>
    <string name="yes">JA</string>
    <string name="no">NEE</string>
    <string name="gebruikersnaam">Gebruikersnaam</string>
    <string name="gegevens">Gegevens</string>
    <string name="aantal">Aantal :</string>
    <string name="opslaan">Opslaan</string>
    <string name="title_activity_hoofdthema">HoofdthemaActivity</string>
    <string name="subthema_van">Subthema\'s van:</string>
    <string name="title_activity_organisatie">OrganisatieActivity</string>
    <string name="hoofdthema_no_subthemas">Dit hoofdthema heeft geen subthema\'s</string>
    <string name="organisatie_no_hoofdthema">Dit organisatie heeft geen hoofdthema\'s</string>
    <string name="hoe_spelen">Hoe speel je het spel?</string>
    <string name="help_deelnemen">Deelnemen</string>
    <string name="help_cirkelsessies">Cirkelsessies</string>
    <string name="help_kaarten">Kaarten</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="chat_verzenden">Verzenden</string>
    <string name="chat_bericht">Schrijf uw bericht</string>
    <string name="deelgenomen">U hebt deelgenomen</string>
    <string name="sessie_gesloten">Cirkelsessie gesloten</string>
    <string name="sessie_open">Cirkelsessie open</string>
    <string name="sessie_gestart">Cirkelsessie gestart</string>
    <string name="sessie_beindigd">Cirkelsessie beëindigd</string>
    <string name="geen_deelname">Geen deelname</string>
    <string name="deelnemen_y_n">Wilt u zeker deelnemen?</string>
    <string name="vul_kaart_tekst">Vul de kaarttekst in</string>
    <string name="kaart_niet_aangemaakt">kaart niet aangemaakt</string>
    <string name="deelname_niet_gelukt">Deelname niet gelukt</string>
    <string name="deelnemers">Deelnemers</string>
    <string name="sessie">Sessie</string>
    <string name="chat">Chat</string>
    <string name="kaart_verplaatst">De kaart is verplaatst</string>
    <string name="kaart_n_verplaatst">De kaart is niet verplaatst</string>
    <string name="beurt">U bent aan de beurt!</string>
    <string name="n_beurt">U bent niet aan de beurt!</string>
    <string name="max_positie">Max positie bereikt!</string>
    <string name="annuleer">Annuleer</string>
    <string name="verplaats_kaart_q">Verplaats kaart?</string>
    <string name="sourceURL">http://teamh-spring.herokuapp.com</string>
    <string name="session">Sessie</string>
    <string name="participants">Deelnemers</string>
    <string name="deelnemers_deelname">Deelnemers</string>
    <string name="geen_organisaties">U hebt geen organisaties</string>
    <string name="geen_cirkelsessies">Geen cirkelsessies beschikbaar</string>
    <string name="geen_deelnames">U hebt geen deelnames</string>
    <string name="geen_hoofdthemas">U hebt geen hoofdthemas</string>
    <string name="geen_subthemas">U hebt geen subthema\'s</string>
    <string name="mijn_profiel">Mijn profiel</string>
    <string name="mijn_subthemas">Mijn subthema\'s</string>
    <string name="cirkelsessies">Cirkelsessies</string>
    <string name="mijn_hoofdthemas">Mijn hoofdthema\'s</string>
    <string name="mijn_deelnames">Mijn deelnames</string>
    <string name="mijn_organisaties">Mijn organisaties</string>
    <string name="help">Help</string>
    <string name="divider">Divider</string>
    <string name="afmelden">Afmelden</string>
    <string name="hoe_spelen_text">U neemt deel aan een sessie dat gestart is en voegt dan kaarten toe indien nodig. Als er al kaarten aanwezig zijn, dan moet u de kaart verplaatsen door erop te klikken. U moet hiervoor wel wachten, omdat men met beurten speelt. De kaart die op de cirkel nummer 1 staat wordt gebruikt als idee.</string>
    <string name="help_kaarten_text">Men kan kaarten aanmaken en hierop een idee schrijven, of bestaande kaarten gebruiken die door andere deelnemers werden aangemaakt verplaatsten.</string>
    <string name="help_cirkelsessie_text">Elke cirkelsessie heeft een status, namelijk; GESTART,OPEN,GESLOTEN en BEËINDIGD. Elke cirkel heeft een bepaalde grootte waarop kaarten worden geplaatst.</string>
    <string name="help_deelnemen_text">Deelnemen kan je alleen doen als de sessie OPEN staat.</string>
    <string name="title_activity_kaart">KaartActivity</string>
    <string name="spelkaart_gegevens">Spelkaart gegevens</string>
    <string name="voornaam">Voornaam</string>
    <string name="familienaam">Familienaam</string>
    <string name="telefoon_nr">Telefoon Nr</string>
    <string name="wachtwoord_profiel">Wachtwoord</string>
    <string name="deelnemer_textview">Deelnemer :</string>
    <string name="new_text">New text</string>
    <string name="gestart">GESTART</string>
    <string name="open">OPEN</string>
    <string name="sample_left">Sampleleft</string>
    <string name="sample">Sample</string>
    <string name="item_datum">Datum :</string>
    <string name="gesloten">GESLOTEN</string>
    <string name="button_beeindigd">beëindigd</string>
    <string name="datum">Datum :</string>
    <string name="is_aan_de_beurt">Is aan de beurt</string>
    <string name="is_niet_aan_de_beurt">Is niet aan de beurt</string>
    <string name="beschrijving">"Beschrijving : "</string>
    <string name="organisatie">"Organisatie : "</string>
    <string name="hoofdthema">"Hoofdthema : "</string>
    <string name="failure">failure</string>
    <string name="gesaved">succes gesaved</string>
    <string name="niet_gesaved">niet gesaved</string>
    <string name="aanmelden_mislukt">het aanmelden is mislukt</string>
    <string name="organisator">"Organisator: "</string>
    <string name="startdatum">"Startdatum: "</string>
</resources>
