<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.kdg.kandoe.kandoeandroid.cirkelsessie.DeelnameFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonInfo"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:theme="@style/MyButton" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deelnemen"
        android:id="@+id/buttonDeelname"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/MyButton" />

    <RelativeLayout
        android:id="@+id/deelnemers_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_below="@id/buttonInfo">
    <TextView
        android:id="@+id/deelnemers_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/deelnemers_deelname"
        android:layout_marginBottom="15dp"
        />
        <ListView
            android:id="@+id/listview_deelnemers"
            android:layout_below="@id/deelnemers_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent"
            android:dividerHeight="10.0sp"/>

    </RelativeLayout>


</RelativeLayout>
