...
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/etChat"
                android:layout_toStartOf="@+id/btSend"
                android:layout_alignBottom="@+id/btSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/chat_bericht"
                android:inputType="textShortMessage"
...
